# course-14

./: README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_product_py.html
src/: category.py  main.py  product.py
tests/: test_category.py  test_product.py
